--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Post List</string>
-    <string name="title_activity_main">MainActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Post List Screen -->
+    <string name="post_list_title">Post List </string>
+    <string name="post_list_error_title">Oops!</string>
+    <string name="post_list_error_subtitle">Looks like someone unplugged a wire</string>
+    <string name="post_list_empty_title">No post yet</string>
+    <string name="post_list_empty_subtitle">Let the users creates some post and check it later!</string>
+
+    <!-- Post Detail Screen -->
+    <string name="post_detail_title">Post Detail</string>
+    <string name="post_detail_error_title">Oops!</string>
+    <string name="post_detail_error_subtitle">Looks like someone unplugged a wire</string>
+
 </resources>
