--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="post_detail_title">Post Detail</string>
     <string name="post_detail_error_title">Oops!</string>
     <string name="post_detail_error_subtitle">Looks like someone unplugged a wire</string>
+    <string name="post_detail_tab_details">Details</string>
+    <string name="post_detail_tab_comments">Comments</string>
+
 
 </resources>
