user wrapper and base for diferent list items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="post_detail_error_subtitle">Looks like someone unplugged a wire</string>
     <string name="post_detail_tab_details">Details</string>
     <string name="post_detail_tab_comments">Comments</string>
-
+    <plurals name="post_detail_comment_total">
+        <item quantity="one">%d comment</item>
+        <item quantity="other">%d comments</item>
+    </plurals>
 
 </resources>
