Show comments error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
         <item quantity="other">%d comments</item>
     </plurals>
 
+    <string name="post_detail_comments_error_title">Oops!</string>
+    <string name="post_detail_comments_error_subtitle">We couldn\'t download the comments… </string>
+
 </resources>
